# etlegacy-stats

./: .env.example  .gitignore  AGENTS.md  README.md  astro.config.mjs  cache-proxy-specs.md  docker-compose.yml  nuke-cache.sh  package-lock.json  package.json  proxy.json  tailwind.config.mjs
.claude/: settings.local.json
.claude/commands/: clarify_task.md  create_plan.md  implement_plan.md  research_codebase.md
api-cache/: 57305.json  57405.json
astro-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  astro.config.mjs  devbox.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  tailwind.config.mjs  todos.md  tsconfig.server.json
astro-server/.claude/: settings.local.json
astro-server/scripts/: convertImages.ts
astro-server/src/: env.d.ts  middleware.ts  server.ts
cache-proxy/: Dockerfile  README.md  go.mod  main.go  main_test.go
caddy-config/: Caddyfile  Dockerfile  docker-entrypoint.sh  purge-helper.go
dev/: README.md  build.sh  down.sh  purge-cache.sh  rebuild.sh  up.sh
isenkram/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  isenkram.json
isenkram/src/: main.rs
nginx/: nginx.conf
nginx-config/: Dockerfile  README.md  default.conf.template  docker-entrypoint.sh  nginx.conf
nginx-config/conf.d/: default.conf
nginx-proxy/: Dockerfile  nginx.conf
src/: env.d.ts
src/assets/: global.css
src/components/: AwardsList.tsx  ColoredName.tsx  ColoredNameSelect.tsx  (+22 more)
varnish/: Dockerfile  default.vcl  start.sh
varnish-cache/: Dockerfile  default.vcl  default.vcl.template  entrypoint.sh
(+97 files in other folders)
